--- a/exercicios_python_br.ipynb
+++ b/exercicios_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMj1kpCGaOAf4e++5iFhVb+",
+      "authorship_tag": "ABX9TyMZrh+SRziRD5SqAx7ozYd1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Conversor de metros em centímetors')\n",
+        "print('Conversor de metros em centímetros')\n",
         "metros = float(input('Quantos metros? '))\n",
         "centimetros = (metros * 100)\n",
         "print('{} metros'.format(metros), 'tem {} centímetros'.format(centimetros))"
@@ -198,10 +198,11 @@
     {
       "cell_type": "code",
       "source": [
+        "print('Cálculo de salário.')\n",
         "valor_hora = float(input('Quanto você ganha por hora? '))\n",
         "horas_trabalhadas = float(input('Quantas horas você trabalha por mês '))\n",
         "salario = valor_hora * horas_trabalhadas\n",
-        "print('Seu salário é de R$ {} esse mês'.format(salario))"
+        "print('Seu salário mensal é de R$ {}'.format(salario))"
       ],
       "metadata": {
         "id": "f8pF20A2aiwB"
