--- a/Cópia de exercicios_python_br.ipynb
+++ b/Cópia de exercicios_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOETEvhZ9KTHUIe7ypuhFCj"
+      "authorship_tag": "ABX9TyOFdycW9zgF7o9TQpgn+G4Z"
     },
     "kernelspec": {
       "name": "python3",
@@ -154,6 +154,24 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "## criando uma função##\n",
+        "import math\n",
+        "\n",
+        "def area_circulo (ac):\n",
+        "  area = math.pi * (ac**2)\n",
+        "  print('A área do círculo é {}'.format(area))\n",
+        "\n",
+        "area_circulo(4)"
+      ],
+      "metadata": {
+        "id": "VOr3yz7cHcQn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Faça um Programa que calcule a área de um quadrado, em seguida mostre o dobro desta área para o usuário.\n"
@@ -174,6 +192,34 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## criando uma função##\n",
+        "def area_do_quadrado (l):\n",
+        "  area = l**2\n",
+        "  print(area)\n",
+        "\n",
+        "area_do_quadrado(2)"
+      ],
+      "metadata": {
+        "id": "zENknBOzG_Ie",
+        "outputId": "50d76b25-adcf-4b2e-9f72-d8893bf14441",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
