--- a/listas_python_brasil.ipynb
+++ b/listas_python_brasil.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBTAlLWda4iqWqGmQul9uj",
+      "authorship_tag": "ABX9TyMwDBHhrEAW8ODYOOqYgjTT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,7 +184,7 @@
         "consoantes = []\n",
         "vogais = ('A', 'E', 'I', 'O', 'U')\n",
         "\n",
-        "for i in range(1,4):\n",
+        "for i in range(1,3):\n",
         "  y = str(input('Insira letras: ').upper())\n",
         "  if y not in vogais:\n",
         "    consoantes += y\n",
@@ -193,6 +193,45 @@
       ],
       "metadata": {
         "id": "epEVGwY2dyb-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faça um Programa que leia 20 números inteiros e armazene-os num vetor. Armazene os números pares no vetor PAR e os números IMPARES no vetor impar. Imprima os três vetores."
+      ],
+      "metadata": {
+        "id": "r9v180DTjlZW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inteiros = []\n",
+        "impar = []\n",
+        "par = []\n",
+        "\n",
+        "print('Par ou ímpar? ')\n",
+        "\n",
+        "for i in range (0,20):\n",
+        "  numeros = int(input('Insira os números: '))\n",
+        "  inteiros.append(numeros)\n",
+        "  if numeros % 2 == 0:\n",
+        "    par.append(numeros)\n",
+        "  else:\n",
+        "    impar.append(numeros)\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(inteiros)\n",
+        "print(par)\n",
+        "print(impar)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "d_vFNB_Vjo5O"
       },
       "execution_count": null,
       "outputs": []
