--- a/dojo1.ipynb
+++ b/dojo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCJhvFsBVoqNI26v0G2dbD",
+      "authorship_tag": "ABX9TyOkGlBaqlgPVYj15dvDoVhA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,16 +178,14 @@
       "cell_type": "code",
       "source": [
         "from itertools import count\n",
-        "string = str(input('Digite uma palavra: '))\n",
+        "string = str(input('Digite uma frase: '))\n",
+        "a = string[0]\n",
+        "if len(string) < 2:\n",
+        "  print('')\n",
+        "string = string.replace(a, '')\n",
+        "a += string[1:]\n",
         "\n",
-        "if string[0] in string[1::]:\n",
-        "  print(string.replace(string[0], '*'))\n",
-        "\n",
-        "\n",
-        "  ####ERRADO############\n",
-        "\n",
-        "  ##https://blog.betrybe.com/python/python-replace/#2##\n",
-        "\n",
+        "print(a)\n",
         "\n",
         "\n",
         "\n",
@@ -195,10 +193,23 @@
         "\n"
       ],
       "metadata": {
-        "id": "E4-SaYvBwUCI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E4-SaYvBwUCI",
+        "outputId": "ef219f0d-ac18-4efe-89e4-b6eeff75dbe4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite uma frase: paralalelepipido\n",
+            "pralaleleiido\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -214,12 +225,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "string1 = str(input('Informe a primeira palavra: '))\n",
+        "string2 = str(input('Informe a segunda palavra: '))\n",
+        "\n",
+        "a = string1[:2]\n",
+        "b = string2[:2]\n",
+        "\n",
+        "palavra1 = b + string1[2:]\n",
+        "palavra2 = a + string2[2:]\n",
+        "\n",
+        "\n",
+        "print(palavra1 + ' ' + palavra2)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "Wm3IAMie8fwn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wm3IAMie8fwn",
+        "outputId": "0cce2aa5-4fd9-4af8-cec0-dd471439f7b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Informe a primeira palavra: pezzy\n",
+            "Informe a segunda palavra: firm\n",
+            "fizzy perm\n"
+          ]
+        }
+      ]
     }
   ]
 }
