--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3CN4AgUgOmzHoW2XfPVZ3",
+      "authorship_tag": "ABX9TyOKvCYy8Z7EziYiL7o6mgx2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -320,47 +320,36 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(0,3):\n",
+        "print('Insira três números inteiros e os mostrarei em ordem decrescente.')\n",
         "\n",
-        "  numeros = int(input('Digite os numeros: '))\n",
+        "numero1 = int(input('Digite o primeiro numero: '))\n",
+        "numero2 = int(input('Digite o segundo numero: '))\n",
+        "numero3 = int(input('Digite o terceiro numero: '))\n",
         "\n",
         "num = []\n",
+        "num.append(numero1)\n",
+        "num.append(numero2)\n",
+        "num.append(numero3)\n",
         "\n",
-        "numeros.append(num)\n",
+        "num.sort()\n",
+        "num.reverse()\n",
         "\n",
         "print(num)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 287
-        },
-        "id": "K7YXY4KIUtle",
-        "outputId": "23874439-77f5-4f1f-a3ec-9a52b4340952"
+        "id": "K7YXY4KIUtle"
       },
-      "execution_count": 115,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Digite os numeros: 1\n",
-            "Digite os numeros: 2\n",
-            "Digite os numeros: 3\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-115-1bbe07220962>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnumeros\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'append'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faça um Programa que pergunte em que turno você estuda. Peça para digitar M-matutino ou V-Vespertino ou N- Noturno. Imprima a mensagem \"Bom Dia!\", \"Boa Tarde!\" ou \"Boa Noite!\" ou \"Valor Inválido!\", conforme o caso."
+      ],
+      "metadata": {
+        "id": "QvyKVV-T23Lw"
+      }
     }
   ]
 }
