--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKvCYy8Z7EziYiL7o6mgx2",
+      "authorship_tag": "ABX9TyOOT0JDn5FaIFBnPIOb0RU+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,8 +122,8 @@
       "source": [
         "print('Consoante ou vogal? \\n')\n",
         "\n",
-        "letra = str(input('Informe uma letra:''\\n'))\n",
-        "vogais = ['a', 'e', 'i', 'o', 'u']\n",
+        "letra = str(input('Informe uma letra:''\\n')).upper()\n",
+        "vogais = ['A', 'E', 'I', 'O', 'U']\n",
         "\n",
         "if letra in vogais:\n",
         "  print('A letra', letra, 'é uma vogal.')\n",
@@ -350,6 +350,30 @@
       "metadata": {
         "id": "QvyKVV-T23Lw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "turno = str(input('Olá! Em que turno você estuda? Para matutino digite M, para vespertino V e para notutno digite a letra N: ')).upper()\n",
+        "\n",
+        "\n",
+        "if turno == 'M':\n",
+        "  print('Bom dia!')\n",
+        "\n",
+        "elif turno == 'V':\n",
+        "  print('Boa tarde!')\n",
+        "\n",
+        "elif turno == 'N':\n",
+        "  print('Boa noite!')\n",
+        "\n",
+        "else:\n",
+        "  print('Valor inválido!')\n"
+      ],
+      "metadata": {
+        "id": "-nGO73Bd3gTX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
