--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOT0JDn5FaIFBnPIOb0RU+",
+      "authorship_tag": "ABX9TyNH6vgeajl5xn1fMnBtpNyK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -371,6 +371,51 @@
       ],
       "metadata": {
         "id": "-nGO73Bd3gTX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "As Organizações Tabajara resolveram dar um aumento de salário aos seus colaboradores e lhe contrataram para desenvolver o programa que calculará os reajustes.\n",
+        "Faça um programa que recebe o salário de um colaborador e o reajuste segundo o seguinte critério, baseado no salário atual:\n",
+        "salários até R$ 280,00 (incluindo) : aumento de 20%\n",
+        "salários entre R$ 280,00 e R$ 700,00 : aumento de 15%\n",
+        "salários entre R$ 700,00 e R$ 1500,00 : aumento de 10%\n",
+        "salários de R$ 1500,00 em diante : aumento de 5% Após o aumento ser realizado, informe na tela:\n",
+        "o salário antes do reajuste;\n",
+        "o percentual de aumento aplicado;\n",
+        "o valor do aumento;\n",
+        "o novo salário, após o aumento."
+      ],
+      "metadata": {
+        "id": "phrAgIKt6DFU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Cálculo de reajuste salaria.')\n",
+        "salario = float(input('Informe o salário: '))\n",
+        "\n",
+        "if salario == 280:\n",
+        "  salario1 = salario * 1.2\n",
+        "  print('O salário inicial era de R$', salario, '\\nhouve um reajuste de 20%. \\nO salario atual é de R$', salario1)\n",
+        "elif salario >= 281 and salario <= 700:\n",
+        "  salario2 = salario * 1.15\n",
+        "  print('O salário inicial era de R$', salario, '\\nhouve um reajuste de 15%. \\nO salario atual é de R$', salario2)\n",
+        "elif salario >= 701 and salario <= 1500:\n",
+        "  salario3 = salario * 1.1\n",
+        "  print('O salário inicial era de R$', salario, '\\nhouve um reajuste de 10%. \\nO salario atual é de R$', salario3)\n",
+        "elif salario >= 1501:\n",
+        "  salario4 =salario * 1.05\n",
+        "  print('O salário inicial era de R$', salario, '\\n houve um reajuste de 5%, \\no salario atual é de R$', salario4)"
+      ],
+      "metadata": {
+        "id": "NsreQB3z6E4T"
       },
       "execution_count": null,
       "outputs": []
