--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNH6vgeajl5xn1fMnBtpNyK",
+      "authorship_tag": "ABX9TyPOXhCPCwB4+L7OlpC++6+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,6 +419,121 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Faça um programa para o cálculo de uma folha de pagamento, sabendo que os descontos são do Imposto de Renda, que depende do salário bruto (conforme tabela abaixo) \n",
+        "3% para o Sindicato e que o FGTS corresponde a 11% do Salário Bruto, mas não é descontado (é a empresa que deposita). \n",
+        "O Salário Líquido corresponde ao Salário Bruto menos os descontos. O programa deverá pedir ao usuário o valor da sua hora e a quantidade de horas trabalhadas no mês.\n",
+        "Desconto do IR:\n",
+        "Salário Bruto até 900 (inclusive) - isento\n",
+        "Salário Bruto até 1500 (inclusive) - desconto de 5%\n",
+        "Salário Bruto até 2500 (inclusive) - desconto de 10%\n",
+        "Salário Bruto acima de 2500 - desconto de 20% Imprima na tela as informações, dispostas conforme o exemplo abaixo. No exemplo o valor da hora é 5 e a quantidade de hora é 220.\n",
+        "\n",
+        "Salário Bruto: (5 * 220)        : R$ 1100,00\n",
+        "        (-) IR (5%)                     : R$   55,00  \n",
+        "        (-) INSS ( 10%)                 : R$  110,00\n",
+        "        FGTS (11%)                      : R$  121,00\n",
+        "        Total de descontos              : R$  165,00\n",
+        "        Salário Liquido                 : R$  935,00"
+      ],
+      "metadata": {
+        "id": "LIndBYu7_Oum"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('---------- Cálculo de folha de pagamento ----------')\n",
+        "numero_horas = int(input('Quantas horas você trabalhou? '))\n",
+        "salario_hora = float(input('Qual o valor de seu salário por hora? '))\n",
+        "\n",
+        "salario_bruto = numero_horas * salario_hora\n",
+        "\n",
+        "if salario_bruto <= 900:\n",
+        "  IR1 = 0\n",
+        "  INSS1 = salario_bruto * 0.1\n",
+        "  FGTS1 = salario_bruto * 0.11\n",
+        "  descontos1 = IR1 + INSS1\n",
+        "  salario_liquido1 = salario_bruto - descontos1\n",
+        "  print('Salário Bruto: (', numero_horas,'*', salario_hora,')      :R$', salario_bruto)\n",
+        "  print('(-) IR (isento)                   : R$',IR1)\n",
+        "  print('(-) INSS (10%)                    : R$',INSS1)\n",
+        "  print('FGTS (11%)                        : R$',FGTS1)\n",
+        "  print('TOtal de descontos                : R$',descontos1)\n",
+        "  print('Salário Líquido                   : R$',salario_liquido1)\n",
+        "\n",
+        "\n",
+        "elif salario_bruto > 900 and salario_bruto <= 1500:\n",
+        "  IR2 = salario_bruto * 0.05\n",
+        "  INSS2 = salario_bruto * 0.1\n",
+        "  FGTS2 = salario_bruto * 0.11\n",
+        "  descontos2 = IR2 + INSS2\n",
+        "  salario_liquido2 = salario_bruto - descontos2\n",
+        "  print('Salário Bruto: (', numero_horas,'*', salario_hora,')      :R$', salario_bruto)\n",
+        "  print('(-) IR (5%)                       : R$',IR2)\n",
+        "  print('(-) INSS (10%)                    : R$',INSS2)\n",
+        "  print('FGTS (11%)                        : R$',FGTS2)\n",
+        "  print('Total de descontos                : R$',descontos2)\n",
+        "  print('Salário Líquido                   : R$',salario_liquido2)\n",
+        "\n",
+        "elif salario_bruto > 1500 and salario_bruto <= 2500:\n",
+        "  IR3 = salario_bruto * 0.1\n",
+        "  INSS3 = salario_bruto * 0.1\n",
+        "  FGTS3 = salario_bruto * 0.11\n",
+        "  descontos3 = IR3 + INSS3\n",
+        "  salario_liquido3 = salario_bruto - descontos3\n",
+        "  print('Salário Bruto: (', numero_horas,'*', salario_hora,')      :R$', salario_bruto)\n",
+        "  print('(-) IR (10%)                      : R$',IR3)\n",
+        "  print('(-) INSS (10%)                    : R$',INSS3)\n",
+        "  print('FGTS (11%)                        : R$',FGTS3)\n",
+        "  print('Total de descontos                : R$',descontos3)\n",
+        "  print('Salário Líquido                   : R$',salario_liquido3)\n",
+        "\n",
+        "elif salario_bruto > 2500:\n",
+        "  IR4 = salario_bruto * 0.2\n",
+        "  INSS4 = salario_bruto * 0.1\n",
+        "  FGTS4 = salario_bruto * 0.11\n",
+        "  descontos4 = IR4 + INSS4\n",
+        "  salario_liquido4 = salario_bruto - descontos4\n",
+        "  print('Salário Bruto: (', numero_horas,'*', salario_hora,')      :R$', salario_bruto)\n",
+        "  print('(-) IR (20%)                      : R$',IR4)\n",
+        "  print('(-) INSS (10%)                    : R$',INSS4)\n",
+        "  print('FGTS (11%)                        : R$',FGTS4)\n",
+        "  print('Total de descontos                : R$',descontos4)\n",
+        "  print('Salário Líquido                   : R$',salario_liquido4)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qv59a3TE_RuI",
+        "outputId": "7500cd52-d91d-4225-d696-40c8cee33b17"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---------- Cálculo de folha de pagamento ----------\n",
+            "Quantas horas você trabalhou? 2600\n",
+            "Qual o valor de seu salário por hora? 2\n",
+            "Salário Bruto: ( 2600 * 2.0 )      :R$ 5200.0\n",
+            "(-) IR (isento)                   : R$ 1040.0\n",
+            "(-) INSS (10%)                    : R$ 520.0\n",
+            "FGTS (11%)                        : R$ 572.0\n",
+            "Total de descontos                : R$ 1560.0\n",
+            "Salário Líquido                   : R$ 3640.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
