--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOXhCPCwB4+L7OlpC++6+k",
+      "authorship_tag": "ABX9TyPKJl5HkIb9nt2UfpwqPWwr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,30 +510,48 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Qv59a3TE_RuI",
-        "outputId": "7500cd52-d91d-4225-d696-40c8cee33b17"
+        "id": "Qv59a3TE_RuI"
       },
-      "execution_count": 84,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "---------- Cálculo de folha de pagamento ----------\n",
-            "Quantas horas você trabalhou? 2600\n",
-            "Qual o valor de seu salário por hora? 2\n",
-            "Salário Bruto: ( 2600 * 2.0 )      :R$ 5200.0\n",
-            "(-) IR (isento)                   : R$ 1040.0\n",
-            "(-) INSS (10%)                    : R$ 520.0\n",
-            "FGTS (11%)                        : R$ 572.0\n",
-            "Total de descontos                : R$ 1560.0\n",
-            "Salário Líquido                   : R$ 3640.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faça um Programa que leia um número e exiba o dia correspondente da semana. (1-Domingo, 2- Segunda, etc.), se digitar outro valor deve aparecer valor inválido."
+      ],
+      "metadata": {
+        "id": "TS6eTeu2IlA6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dia = int(input(\"Qual o dia? \"))\n",
+        "\n",
+        "if dia == 1:\n",
+        "  print('Domingo')\n",
+        "elif dia == 2:\n",
+        "  print('Segunda')\n",
+        "elif dia == 3:\n",
+        "  print('Terça')\n",
+        "elif dia == 4:\n",
+        "  print('Quarta')\n",
+        "elif dia == 5:\n",
+        "  print('Quinta')\n",
+        "elif dia == 6:\n",
+        "  print('Sexta')\n",
+        "elif dia == 7:\n",
+        "  print('Sábado')\n",
+        "\n",
+        "\n",
+        "print(dia) \n"
+      ],
+      "metadata": {
+        "id": "_vGFbeIpImXV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
