--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKJl5HkIb9nt2UfpwqPWwr",
+      "authorship_tag": "ABX9TyPUPTPxPHdbF4gPbauw0kMs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -544,11 +544,41 @@
         "elif dia == 7:\n",
         "  print('Sábado')\n",
         "\n",
-        "\n",
-        "print(dia) \n"
+        "\n"
       ],
       "metadata": {
-        "id": "_vGFbeIpImXV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_vGFbeIpImXV",
+        "outputId": "e20d2ee6-ec53-43a8-da1b-beda8d42515e"
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Qual o dia? 1\n",
+            "Domingo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Faça um programa que lê as duas notas parciais obtidas por um aluno numa disciplina ao longo de um semestre, e calcule a sua média. A atribuição de conceitos obedece à tabela abaixo:\n",
+        "  Média de Aproveitamento  Conceito\n",
+        "  Entre 9.0 e 10.0        A\n",
+        "  Entre 7.5 e 9.0         B\n",
+        "  Entre 6.0 e 7.5         C\n",
+        "  Entre 4.0 e 6.0         D\n",
+        "  Entre 4.0 e zero        E\n",
+        "O algoritmo deve mostrar na tela as notas, a média, o conceito correspondente e a mensagem “APROVADO” se o conceito for A, B ou C ou “REPROVADO” se o conceito for D ou E."
+      ],
+      "metadata": {
+        "id": "NKJN5WUkQcxK"
       },
       "execution_count": null,
       "outputs": []
