--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUPTPxPHdbF4gPbauw0kMs",
+      "authorship_tag": "ABX9TyPVDpUSRKsokLvekZtTkK+m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -547,23 +547,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_vGFbeIpImXV",
-        "outputId": "e20d2ee6-ec53-43a8-da1b-beda8d42515e"
+        "id": "_vGFbeIpImXV"
       },
-      "execution_count": 105,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Qual o dia? 1\n",
-            "Domingo\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -579,6 +566,69 @@
       ],
       "metadata": {
         "id": "NKJN5WUkQcxK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Cálculo de média')\n",
+        "nome = str(input('Qual o nome do aluno? '))\n",
+        "nota1 = float(input('Qual a primeira nota: '))\n",
+        "nota2 = float(input('Qual a segunda nota? '))\n",
+        "\n",
+        "media = (nota1+nota2)/2\n",
+        "\n",
+        "if media <= 4:\n",
+        "  print('\\nNota 1:               ',nota1,\n",
+        "        '\\nNota 2:               ',nota2,\n",
+        "        '\\nMédia:                ',media,\n",
+        "        '\\nConceito:              E'\n",
+        "        '\\nO aluno,',nome, 'foi:   Reprovado ')\n",
+        "if media > 4 and media < 6:\n",
+        "  print('\\nNota 1:               ',nota1,\n",
+        "        '\\nNota 2:               ',nota2,\n",
+        "        '\\nMédia:                ',media,\n",
+        "        '\\nConceito:              D'\n",
+        "        '\\nO aluno,',nome, 'foi:   Reprovado ')\n",
+        "if media >= 6 and media <= 7.5:\n",
+        "  print('\\nNota 1:               ',nota1,\n",
+        "        '\\nNota 2:               ',nota2,\n",
+        "        '\\nMédia:                ',media,\n",
+        "        '\\nConceito:              C'\n",
+        "        '\\nO aluno,',nome, 'foi:   Aprovado ')\n",
+        "if media > 7.5 and media < 9:\n",
+        "  print('\\nNota 1:               ',nota1,\n",
+        "        '\\nNota 2:               ',nota2,\n",
+        "        '\\nMédia:                ',media,\n",
+        "        '\\nConceito:              B'\n",
+        "        '\\nO aluno,',nome, 'foi:   Aprovado ')\n",
+        "if media >= 9 and media <= 10:\n",
+        "  print('\\nNota 1:               ',nota1,\n",
+        "        '\\nNota 2:               ',nota2,\n",
+        "        '\\nMédia:                ',media,\n",
+        "        '\\nConceito:              A'\n",
+        "        '\\nO aluno,',nome, 'foi:   Aprovado ')\n"
+      ],
+      "metadata": {
+        "id": "cgYn-nr4RIbN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Faça um Programa que peça os 3 lados de um triângulo. O programa deverá informar se os valores podem ser um triângulo. Indique, caso os lados formem um triângulo, se o mesmo é: equilátero, isósceles ou escaleno.\n",
+        "Dicas:\n",
+        "Três lados formam um triângulo quando a soma de quaisquer dois lados for maior que o terceiro;\n",
+        "Triângulo Equilátero: três lados iguais;\n",
+        "Triângulo Isósceles: quaisquer dois lados iguais;\n",
+        "Triângulo Escaleno: três lados diferentes;"
+      ],
+      "metadata": {
+        "id": "RK24HB2BVXSE"
       },
       "execution_count": null,
       "outputs": []
