--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVDpUSRKsokLvekZtTkK+m",
+      "authorship_tag": "ABX9TyMLtl2Pu9qeBBNex+hfS2dG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -629,6 +629,58 @@
       ],
       "metadata": {
         "id": "RK24HB2BVXSE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Informe os lados do triêngulo para saber se é Equilátero, Isósceles ou Escaleno.')\n",
+        "\n",
+        "lado_1 = float(input('Informe o primeiro lado: '))\n",
+        "lado_2 = float(input('Informe o segundo lado: '))\n",
+        "lado_3 = float(input('Informe o terceiro lado: '))\n",
+        "\n",
+        "if lado_1 == lado_2 and lado_2 == lado_3:\n",
+        "  print('É um triângulo é Equilátero.')\n",
+        "\n",
+        "if lado_1 == lado_2 and lado_1 != lado_3:\n",
+        "  print('É um triângulo Isósceles.')\n",
+        "if lado_1 == lado_3 and lado_2 != lado_3:\n",
+        "   print('É um triângulo Isósceles.')\n",
+        "if lado_2 == lado_3 and lado_2 != lado_1:\n",
+        "   print('É um triângulo Isósceles.')\n",
+        "\n",
+        "if lado_1 != lado_2 and lado_1 != lado_3 and lado_2 != lado_3:\n",
+        "  print('É um triânculo Escaleno.')"
+      ],
+      "metadata": {
+        "id": "EENOBJcHFNAU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Faça um programa que calcule as raízes de uma equação do segundo grau, na forma ax2 + bx + c. O programa deverá pedir os valores de a, b e c e fazer as consistências, informando ao usuário nas seguintes situações:\n",
+        "Se o usuário informar o valor de A igual a zero, a equação não é do segundo grau e o programa não deve fazer pedir os demais valores, sendo encerrado;\n",
+        "Se o delta calculado for negativo, a equação não possui raizes reais. Informe ao usuário e encerre o programa;\n",
+        "Se o delta calculado for igual a zero a equação possui apenas uma raiz real; informe-a ao usuário;\n",
+        "Se o delta for positivo, a equação possui duas raiz reais; informe-as ao usuário;"
+      ],
+      "metadata": {
+        "id": "jhvJ3KSuIZpP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gmwPUpNrIa6h"
       },
       "execution_count": null,
       "outputs": []
