--- a/estrutura_decisao_python_br.ipynb
+++ b/estrutura_decisao_python_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLtl2Pu9qeBBNex+hfS2dG",
+      "authorship_tag": "ABX9TyN3meZF01lpmlsGmKbOW+fV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -664,7 +664,8 @@
     {
       "cell_type": "code",
       "source": [
-        "Faça um programa que calcule as raízes de uma equação do segundo grau, na forma ax2 + bx + c. O programa deverá pedir os valores de a, b e c e fazer as consistências, informando ao usuário nas seguintes situações:\n",
+        "Faça um programa que calcule as raízes de uma equação do segundo grau, na forma ax2 + bx + c. O programa deverá pedir os valores de a, b e c e fazer as consistências,\n",
+        " informando ao usuário nas seguintes situações:\n",
         "Se o usuário informar o valor de A igual a zero, a equação não é do segundo grau e o programa não deve fazer pedir os demais valores, sendo encerrado;\n",
         "Se o delta calculado for negativo, a equação não possui raizes reais. Informe ao usuário e encerre o programa;\n",
         "Se o delta calculado for igual a zero a equação possui apenas uma raiz real; informe-a ao usuário;\n",
@@ -678,12 +679,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import math\n",
+        "\n",
+        "a = float(input('Informe o valor de a:'))\n",
+        "if a == 0:\n",
+        "  print('A não pode ser zero')\n",
+        "else:\n",
+        "\n",
+        "  b = float(input('Informe o valor de b:'))\n",
+        "  c = float(input('Informe o valor de c:'))\n",
+        "\n",
+        "delta = (b**2) - (4 * a * c)\n",
+        "\n",
+        "if delta < 0:\n",
+        "  print('A equação não possui valores reais.')\n",
+        "else:\n",
+        "  x = -b + math.sqrt(delta)/2*a\n",
+        "  x1 = -b -math.sqrt(delta)/2*a\n",
+        "\n",
+        "if delta == 0:\n",
+        "  print('O delta possui apenas uma raiz real', x1)\n",
+        "\n",
+        "if delta > 0:\n",
+        "  print('Delta possui duas raízes reais x1:{:.2f} e x2:{:.2f}'.format(x, x1))\n"
+      ],
       "metadata": {
-        "id": "gmwPUpNrIa6h"
+        "id": "gmwPUpNrIa6h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7eebb6f1-0d24-4b96-b5fd-3570d9d8204c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Informe o valor de a:12\n",
+            "Informe o valor de b:80\n",
+            "Informe o valor de c:15\n",
+            "Delta possui duas raízes reais x1:372.19 e x2:-532.19\n"
+          ]
+        }
+      ]
     }
   ]
 }
