--- a/estruturaDecisaoPython_br.ipynb
+++ b/estruturaDecisaoPython_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe2WHR8GLos6QNMTRnlSsc",
+      "authorship_tag": "ABX9TyOd4+dGTRgmhJ5vPIzI70/T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -821,7 +821,7 @@
         "id": "5fbtKy9EVyUR",
         "outputId": "9e22aef3-1a9b-4956-9600-1a65b683c288"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,6 +835,67 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faça um Programa para leitura de três notas parciais de um aluno. O programa deve calcular a média alcançada por aluno e presentar:\n",
+        "A mensagem \"Aprovado\", se a média for maior ou igual a 7, com a respectiva média alcançada;\n",
+        "A mensagem \"Reprovado\", se a média for menor do que 7, com a respectiva média alcançada;\n",
+        "A mensagem \"Aprovado com Distinção\", se a média for igual a 10."
+      ],
+      "metadata": {
+        "id": "2pTaKYqSjjkw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Cálculo de média')\n",
+        "\n",
+        "nota1 = float(input('Informe a primeira nota: '))\n",
+        "nota2 = float(input('Informe a segunda nota: '))\n",
+        "nota3 = float(input('Informe a terceira nota: '))\n",
+        "\n",
+        "media = (nota1 + nota2 + nota3)/3\n",
+        "\n",
+        "if media < 7:\n",
+        "  print('O aluno ficou com média', media,'e foi reprovado.')\n",
+        "if media >= 7 and media < 10:\n",
+        "  print('O aluno fico com a média', media,'e foi aprovado.')\n",
+        "if media == 10:\n",
+        "  print('O aluno ficou com a média', media,'e foi aprovado com distinçao.')"
+      ],
+      "metadata": {
+        "id": "hfwyVlJWjnwb",
+        "outputId": "d214179b-adc9-4b12-fb85-729f821108f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cálculo de média\n",
+            "Informe a primeira nota: 7\n",
+            "Informe a segunda nota: 7\n",
+            "Informe a terceira nota: 7\n",
+            "O aluno fico com a média 7.0 e foi aprovado.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G9RzAjeKkhB_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
