--- a/estruturaDecisaoPython_br.ipynb
+++ b/estruturaDecisaoPython_br.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd4+dGTRgmhJ5vPIzI70/T",
+      "authorship_tag": "ABX9TyNueJngpY7KFCh/F+bbKk57",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -867,32 +867,129 @@
         "  print('O aluno ficou com a média', media,'e foi aprovado com distinçao.')"
       ],
       "metadata": {
-        "id": "hfwyVlJWjnwb",
-        "outputId": "d214179b-adc9-4b12-fb85-729f821108f2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "hfwyVlJWjnwb"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cálculo de média\n",
-            "Informe a primeira nota: 7\n",
-            "Informe a segunda nota: 7\n",
-            "Informe a terceira nota: 7\n",
-            "O aluno fico com a média 7.0 e foi aprovado.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "21 -Faça um Programa para um caixa eletrônico. O programa deverá perguntar ao usuário a valor do saque e depois informar quantas notas de cada valor serão fornecidas. \n",
+        "As notas disponíveis serão as de 1, 5, 10, 50 e 100 reais. O valor mínimo é de 10 reais e o máximo de 600 reais. O programa não deve se preocupar com a quantidade de notas \n",
+        "existentes na máquina.\n",
+        "Exemplo 1: Para sacar a quantia de 256 reais, o programa fornece duas notas de 100, uma nota de 50, uma nota de 5 e uma nota de 1;\n",
+        "Exemplo 2: Para sacar a quantia de 399 reais, o programa fornece três notas de 100, uma nota de 50, quatro notas de 10, uma nota de 5 e quatro notas de 1."
+      ],
+      "metadata": {
+        "id": "G9RzAjeKkhB_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('======================= Caixa eletrônico =======================\\n')\n",
+        "print('Valor mínimo R$10,00 e valor máximo R$600,00\\n')\n",
+        "\n",
+        "valor = int(input('Informe o valor solicitado:'))\n",
+        "\n",
+        "if (valor < 10) or (valor > 600):\n",
+        "  print('Valor não permitido.')\n",
+        "\n",
+        "\n",
+        "if valor >= 10 and valor <= 600:\n",
+        "  notas100 = valor//100\n",
+        "  valor = valor % 100\n",
+        "  print(notas100,'de R$100,00')\n",
+        "\n",
+        "  notas50 = valor//50\n",
+        "  valor = valor % 50\n",
+        "  print(notas50,'de R$50,00')\n",
+        "\n",
+        "  notas10 = valor//10\n",
+        "  valor = valor % 10\n",
+        "  print(notas10,'de R$10,00')\n",
+        "\n",
+        "  notas5 = valor//5\n",
+        "  valor = valor % 5\n",
+        "  print(notas5,'de R$5,00')\n",
+        "  \n",
+        "  notas1 = valor\n",
+        "  print(notas1,'de R$1,00')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Hz0XRe8ECIPI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faça um Programa que peça um número inteiro e determine se ele é par ou impar. Dica: utilize o operador módulo (resto da divisão)."
+      ],
+      "metadata": {
+        "id": "yAdvvHjAiuIS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('O número é par ou ímpar?')\n",
+        "numero = int(input('Informe o número: '))\n",
+        "if numero % 2 == 0:\n",
+        "  print('O número {} é par.'.format(numero))\n",
+        "else:\n",
+        "  print(f'O número é ímpar.'.format(numero))"
+      ],
+      "metadata": {
+        "id": "faUjDIS3iu4e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "23 - Faça um Programa que peça um número e informe se o número é inteiro ou \n",
+        "\n",
+        "\n",
+        "decimal. Dica: utilize uma função de arredondamento."
+      ],
+      "metadata": {
+        "id": "1VWiw1tOjdg-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('O número é inteiro ou decimal?')\n",
+        "numero = float(input('Informe o número: '))\n",
+        "\n",
+        "if numero == round(numero):\n",
+        "  print( 'O número é inteiro')\n",
+        "else:\n",
+        "  print('O número é decimal.')"
+      ],
+      "metadata": {
+        "id": "OfCpHdVsjhtX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "G9RzAjeKkhB_"
+        "id": "o6NsTemIl2Yb"
       },
       "execution_count": null,
       "outputs": []
